--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Square Open Source</title>
+    <title>PeopleBrowsr Open Source</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 
     <link href="/base.css" media="screen" rel="stylesheet" type="text/css" />
@@ -16,7 +16,7 @@
         <section class="profile-masthead" id="masthead">
           <header class="profile-logo">
             <div class="profile-logo-image">
-              <img alt="Square Open Source " src="/images/logo.png" />
+              <img alt="PeopleBrowsr Open Source " src="https://avatars.io/twitter/peoplebrowsr" />
             </div>
             <div class="profile-name">
               <h1>Square Open Source</h1>
@@ -55,7 +55,7 @@
              
             </div>
 
-            <a id="btn-view-full-menu" class="btn-view-full-menu" href="http://github.com/square">View full list of repositories</a>
+            <a id="btn-view-full-menu" class="btn-view-full-menu" href="https://github.com/PeopleBrowsr">View full list of repositories</a>
           </article>
 
           <section class="profile-modules" id="modules">
