--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
               <img alt="PeopleBrowsr Open Source " src="https://avatars.io/twitter/peoplebrowsr" />
             </div>
             <div class="profile-name">
-              <h1>Square Open Source</h1>
+              <h1>PeopleBrowsr Open Source</h1>
             </div>
           </header>
           <aside class="profile-summary">
             <div class="summary-location summary-module">
-              <a href="http://github.com/square">github.com/square</a>
+              <a href="http://github.com/peoplebrowsr">github.com/peoplebrowsr</a>
             </div>
           </aside>
         </section>
@@ -33,19 +33,49 @@
           <!-- TODO header? -->
 
           <div class="profile-description">
-            <p>As a company built on open source, here are some of the internally-developed libraries we have contributed back to the community.</p>
+            <p>The blockchain integrated platform for creating Profiles, starting Conversations and engaging Connections - All with simple tools, on your own Domains.</p>
           </div>
 
           <article class="profile-menu" id="menu">
 
-            <div id="android" class="menu-category">
-              <h3 class="menu-category-name">Android</h3>
+            <div id="projects" class="menu-category">
+              <h3 class="menu-category-name">Projects</h3>
               <ol class="menu-category-list has-images">
               <li class="menu-item">
                 <div class="menu-item-info">
-                  <h4 class="menu-item-name">android-times-square</h4>
-                  <span class="menu-item-price"><a href="https://github.com/square/android-times-square" target="_blank">GitHub</a></span>
-                  <p class="menu-item-description">Standalone Android widget for picking a single date from a calendar view.</p>
+                  <h4 class="menu-item-name">Kred-NFT-Documentation</h4>
+                  <span class="menu-item-price"><a href="https://github.com/PeopleBrowsr/Kred-NFT-Documentation" target="_blank">GitHub</a></span>
+                  <p class="menu-item-description">Kred NFT Developer Documentation.</p>
+                </div>
+                <div class="menu-item-image has-meta-content">
+                  <img src="/repo_images/android-times-square.jpg" />
+                </div>
+              </li>
+              <li class="menu-item">
+                <div class="menu-item-info">
+                  <h4 class="menu-item-name">Kred-NFT-API-Client</h4>
+                  <span class="menu-item-price"><a href="https://github.com/PeopleBrowsr/Kred-NFT-API-Client" target="_blank">GitHub</a></span>
+                  <p class="menu-item-description">A simple Python client library to manage access to the Kred NFT API.</p>
+                </div>
+                <div class="menu-item-image has-meta-content">
+                  <img src="/repo_images/android-times-square.jpg" />
+                </div>
+              </li>
+              <li class="menu-item">
+                <div class="menu-item-info">
+                  <h4 class="menu-item-name">Kred-NFT-Coin</h4>
+                  <span class="menu-item-price"><a href="https://github.com/PeopleBrowsr/Kred-NFT-Coin" target="_blank">GitHub</a></span>
+                  <p class="menu-item-description">A library to render a single coin, using JavaScript, CSS, and SVG.</p>
+                </div>
+                <div class="menu-item-image has-meta-content">
+                  <img src="/repo_images/android-times-square.jpg" />
+                </div>
+              </li>
+              <li class="menu-item">
+                <div class="menu-item-info">
+                  <h4 class="menu-item-name">Kred-NFT-Coin-Widgets</h4>
+                  <span class="menu-item-price"><a href="https://github.com/PeopleBrowsr/Kred-NFT-Coin-Widgets" target="_blank">GitHub</a></span>
+                  <p class="menu-item-description">A Javascript widget to handle selection, sorting, and rendering of a page of coins.</p>
                 </div>
                 <div class="menu-item-image has-meta-content">
                   <img src="/repo_images/android-times-square.jpg" />
