--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <a id="btn-view-full-menu" class="btn-view-full-menu" href="https://github.com/PeopleBrowsr">View full list of repositories</a>
           </article>
 
-          <section class="profile-modules" id="modules">
+          <section class="profile-modules" id="modules" style="display:none;">
             <ul class='twitter-columns'>
               <li class="profile-module module-twitter">
                 <h2 class="module-name">Tweets</h2>
