--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <li class="menu-item">
                 <div class="menu-item-info">
                   <h4 class="menu-item-name">Kred-NFT-Documentation</h4>
-                  <span class="menu-item-price"><a href="https://github.com/PeopleBrowsr/Kred-NFT-Documentation" target="_blank">GitHub</a></span>
+                  <span class="menu-item-price"><a href="https://github.com/PeopleBrowsr/Kred-NFT-Documentation" target="_blank">Kred-NFT-Documentation on GitHub</a></span>
                   <p class="menu-item-description">Kred NFT Developer Documentation.</p>
                 </div>
                 <div class="menu-item-image has-meta-content">
@@ -53,8 +53,8 @@
               </li>
               <li class="menu-item">
                 <div class="menu-item-info">
-                  <h4 class="menu-item-name">Kred-NFT-API-Client</h4>
-                  <span class="menu-item-price"><a href="https://github.com/PeopleBrowsr/Kred-NFT-API-Client" target="_blank">GitHub</a></span>
+                  <h4 class="menu-item-name">Access the Kred NFT API</h4>
+                  <span class="menu-item-price"><a href="https://github.com/PeopleBrowsr/Kred-NFT-API-Client" target="_blank">Kred-NFT-API-Client on GitHub</a></span>
                   <p class="menu-item-description">A simple Python client library to manage access to the Kred NFT API.</p>
                 </div>
                 <div class="menu-item-image has-meta-content">
@@ -63,9 +63,9 @@
               </li>
               <li class="menu-item">
                 <div class="menu-item-info">
-                  <h4 class="menu-item-name">Kred-NFT-Coin</h4>
-                  <span class="menu-item-price"><a href="https://github.com/PeopleBrowsr/Kred-NFT-Coin" target="_blank">GitHub</a></span>
-                  <p class="menu-item-description">A library to render a single coin, using JavaScript, CSS, and SVG.</p>
+                  <h4 class="menu-item-name">Render Kred Coins in your App</h4>
+                  <span class="menu-item-price"><a href="https://github.com/PeopleBrowsr/Kred-NFT-Coin" target="_blank">Kred-NFT-Coin on GitHub</a></span>
+                  <p class="menu-item-description">A library to render a single Coin, using JavaScript, CSS, and SVG.</p>
                 </div>
                 <div class="menu-item-image has-meta-content">
                   <img src="/repo_images/android-times-square.jpg" />
@@ -73,8 +73,8 @@
               </li>
               <li class="menu-item">
                 <div class="menu-item-info">
-                  <h4 class="menu-item-name">Kred-NFT-Coin-Widgets</h4>
-                  <span class="menu-item-price"><a href="https://github.com/PeopleBrowsr/Kred-NFT-Coin-Widgets" target="_blank">GitHub</a></span>
+                  <h4 class="menu-item-name">Create a Kred NFT Widget</h4>
+                  <span class="menu-item-price"><a href="https://github.com/PeopleBrowsr/Kred-NFT-Coin-Widgets" target="_blank">Kred-NFT-Coin-Widgets on GitHub</a></span>
                   <p class="menu-item-description">A Javascript widget to handle selection, sorting, and rendering of a page of coins.</p>
                 </div>
                 <div class="menu-item-image has-meta-content">
