--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
           <article class="profile-menu" id="menu">
 
             <div id="projects" class="menu-category">
-              <h3 class="menu-category-name">Projects</h3>
+              <h3 class="menu-category-name">Get Started</h3>
               <ol class="menu-category-list has-images">
               <li class="menu-item">
                 <div class="menu-item-info">
-                  <h4 class="menu-item-name">Kred-NFT-Documentation</h4>
+                  <h4 class="menu-item-name">View the Kred NFT Docs</h4>
                   <span class="menu-item-price"><a href="https://github.com/PeopleBrowsr/Kred-NFT-Documentation" target="_blank">Kred-NFT-Documentation on GitHub</a></span>
                   <p class="menu-item-description">Kred NFT Developer Documentation.</p>
                 </div>
