--- a/index.html
+++ b/index.html
@@ -116,12 +116,7 @@
       <nav class="footer-navigation">
         <i class="icon-square-footer"></i>
         <ul class="footer-navigation-list">
-          <li class="footer-navigation-item"><a href="https://squareup.com/directory">Square Directory</a></li>
-          <li class="footer-navigation-item"><a href="https://cash.me">Square Cash</a></li>
-          <li class="footer-navigation-item"><a href="https://squareup.com/register">Square Register</a></li>
-          <li class="footer-navigation-item"><a href="https://squareup.com/security">Security</a></li>
-          <li class="footer-navigation-item"><a href="https://squareup.com/legal/privacy">Privacy</a></li>
-          <li class="footer-navigation-item"><a href="https://squareup.com/help" class="track">Help Center</a></li>
+          <li class="footer-navigation-item"><a href="https://www.peoplebrowsr.com">PeopleBrowsr.com</a></li>
         </ul>
         <p class="copyright">© 2019 PeopleBrowsr Inc. All rights reserved.</p>
       </nav>
