--- a/index.html
+++ b/index.html
@@ -43,13 +43,15 @@
               <ol class="menu-category-list has-images">
               <li class="menu-item">
                 <div class="menu-item-info">
-                  <h4 class="menu-item-name">View the Kred NFT Docs</h4>
-                  <span class="menu-item-price"><a href="https://github.com/PeopleBrowsr/Kred-NFT-Documentation" target="_blank">Kred-NFT-Documentation on GitHub</a></span>
-                  <p class="menu-item-description">Kred NFT Developer Documentation.</p>
-                </div>
                 <div class="menu-item-image has-meta-content">
                   <img src="/repo_images/android-times-square.jpg" />
                 </div>
+                  <h4 class="menu-item-name">View the Kred NFT Docs</h4>
+          
+                  <p class="menu-item-descriptionx">Kred NFT Developer Documentation.</p>
+                  <span class="menu-item-price"><a href="https://github.com/PeopleBrowsr/Kred-NFT-Documentation" target="_blank">GitHub</a></span>
+                </div>
+               
               </li>
               <li class="menu-item">
                 <div class="menu-item-info">
