--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <li class="menu-item">
                 <div class="menu-item-info">
                 <div class="menu-item-image has-meta-content">
-                  <img src="/repo_images/android-times-square.jpg" />
+                  <img src="/docs.svg" />
                 </div>
                   <h4 class="menu-item-name">View the Kred NFT Docs</h4>
           
@@ -60,7 +60,7 @@
                   <p class="menu-item-description">A simple Python client library to manage access to the Kred NFT API.</p>
                 </div>
                 <div class="menu-item-image has-meta-content">
-                  <img src="/repo_images/android-times-square.jpg" />
+                  <img src="/api.svg" />
                 </div>
               </li>
               <li class="menu-item">
@@ -70,7 +70,7 @@
                   <p class="menu-item-description">A library to render a single Coin, using JavaScript, CSS, and SVG.</p>
                 </div>
                 <div class="menu-item-image has-meta-content">
-                  <img src="/repo_images/android-times-square.jpg" />
+                  <img src="/coins.svg" />
                 </div>
               </li>
               <li class="menu-item">
@@ -80,7 +80,7 @@
                   <p class="menu-item-description">A Javascript widget to handle selection, sorting, and rendering of a page of coins.</p>
                 </div>
                 <div class="menu-item-image has-meta-content">
-                  <img src="/repo_images/android-times-square.jpg" />
+                  <img src="/widgets.svg" />
                 </div>
               </li>
               </ol>
