--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
                   <h4 class="menu-item-name">View the Kred NFT Docs</h4>
           
-                  <p class="menu-item-description">Kred NFT Developer Documentation.</p>
+                  <p class="menu-item-description">This graphic guide shows how to build your own app using the Kred NFT API.</p>
                   <span class="menu-item-price"><a href="https://github.com/PeopleBrowsr/Kred-NFT-Documentation" target="_blank">View on GitHub</a></span>
                 </div>
                
