--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </div>
                   <h4 class="menu-item-name">Create a Kred NFT Widget</h4>
                  <p class="menu-item-description">A Javascript widget to handle selection, sorting, and rendering of a page of coins.</p>
-                  <span class="menu-item-price"><a href="https://github.com/PeopleBrowsr/Kred-NFT-Coin-Widgets" target="_blank">Kred-NFT-Coin-Widgets on GitHub</a></span>
+                  <span class="menu-item-price"><a href="https://github.com/PeopleBrowsr/Kred-NFT-Coin-Widgets" target="_blank">View on GitHub</a></span>
                   
                 </div>
                 
